fix word wrap on mark

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@ body {
 mark {
     color: #ffd6ff;
     background-color: transparent;
+    word-wrap:break-word;
 }
 
 main {
